@@ -1,3 +1,8 @@
+????-??-??  1.0-r18  Sauce Labs <help@saucelabs.com>
+
+    * Latency logging and warn about high latency connections.
+    * More aggresive cleanup on exit.
+
 2010-09-27  1.0-r17  Sauce Labs <help@saucelabs.com>
 
 	* Fixed possible traceback during .ssh file checks.
